[tool.poetry]
name = "duster"
version = "0.1.0"
description = ""
authors = ["Sander Teunissen <s.teunissen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
# rich = "^13.5.2"
# survey = "^4.5.4"
questionary = "^2.0.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.5.1"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
