[tool.poetry]
name = "brushit"
version = "0.3.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.scripts]
brushit = 'brushit.cli:run'

[tool.poetry.dependencies]
python = "^3.10"
questionary = "2.0.0"
clipstick = "^0.3.5"


[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.2"
mypy = ">=1.5.1"
ruff = ">=0.0.287"
black = ">=23.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
